test/files/pos/t3567/Outer.java
class Outer<T> {
  class Inner {
  }
  static Outer<Integer>.Inner f() {
    return null;
  }
}
