test/files/neg/t750b/AO.java
public class AO {
    public static <T> void f(T[] ar0) {
        System.out.println(ar0);
    }
}